# zed

./: .rules  Cargo.toml  GIT_GRAPH_STATUS.md  MISSING_DIFF_FEATURES.md  PR_PREPARATION.md  a.md
.memory-bank/: 00-PROJECT-BRIEF.md  01-ARCHITECTURE.md  02-CURRENT-STATE.md  03-CONSTRAINTS.md  04-WORKFLOWS.md  99-CHANGELOG.md
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/settings/: default.json
crates/agent/src/: tool_permissions.rs
crates/agent_settings/src/: agent_settings.rs
crates/agent_ui/src/: agent_panel.rs  agent_ui.rs
crates/diff_viewer/: Cargo.toml
crates/diff_viewer/src/: connector.rs  connector_builder.rs  constants.rs  lib.rs  viewer.rs
crates/diff_viewer/src/rendering/: colors.rs  connectors.rs  crushed_blocks.rs  revert_buttons.rs
crates/editor/src/: editor.rs  editor_settings.rs  element.rs  split.rs
crates/fs/src/: fake_git_repo.rs
crates/git/src/: repository.rs
crates/git_graph/: Cargo.toml
crates/git_graph/src/: git_graph.rs  git_modals.rs
crates/git_ui/: Cargo.toml
crates/git_ui/src/: git_panel.rs  git_ui.rs  project_diff.rs  split_diff_model.rs  split_diff_settings.rs
crates/language_models/src/: settings.rs
crates/project/src/: git_store.rs  local_history.rs  project.rs
crates/project_panel/: Cargo.toml
crates/project_panel/src/: project_panel.rs
crates/proto/proto/: git.proto  zed.proto
crates/proto/src/: proto.rs
crates/settings/: Cargo.toml
crates/settings/src/: settings_content.rs  vscode_import.rs
crates/settings_content/src/: agent.rs  (+1 more)
crates/zed/: Cargo.toml
(+4 files in other folders)
