[package]
name = "diff_viewer"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[features]
test-support = []

[dependencies]
anyhow.workspace = true
editor.workspace = true
gpui.workspace = true
language.workspace = true
multi_buffer.workspace = true
project.workspace = true
theme.workspace = true
ui.workspace = true
workspace.workspace = true

imara-diff = "0.2.0"

[dev-dependencies]
ctor.workspace = true
gpui = { workspace = true, features = ["test-support"] }
rand.workspace = true
serde_json.workspace = true
unindent.workspace = true
zlog.workspace = true

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "demo_gpui"
path = "examples/demo_gpui.rs"